fix: hide horizontal scroll bar

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -9,6 +9,7 @@ html {
 
 body {
   background: #ca0015;
+  overflow-x: hidden;
 }
 
 * {
